QQ-697 -fixed issue with sync count spacing

--- a/source/styles/_footer.scss
+++ b/source/styles/_footer.scss
@@ -60,8 +60,8 @@ footer {
           span {
             position: absolute;
             background: $salesforce;
-            top: -6px;
-            right: 5px;
+            top: -5px;
+            right: -1px;
             border-radius: 15px;
             padding: 3px;
             min-width: 14px;
